--- a/src/main/resources/templates/zookeeper/zookeeper.html
+++ b/src/main/resources/templates/zookeeper/zookeeper.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>zk管理</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>可视化工具</title>
+
+    <link href="/static/common/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/modules/system/css/home.css" rel="stylesheet">
+    <script src="/static/common/jquery/jquery-3.4.1.min.js"></script>
+    <script src="/static/common/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-    zk节点操作界面
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">可视化项目</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li id="homeTag"><a href="/home/view">首页</a></li>
+                <li id="zkTag" class="active"><a href="/zk/view">zk管理</a></li>
+                <li id="logTag"><a href="/operatorLog/view">操作日志</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div id="tabContent" class="container_view">
+
+        zk管理界面
+
+    </div>
+</div>
 </body>
 </html>
