[CHG] 表格改用bootstrap-table样式

--- a/src/main/resources/templates/system/log.html
+++ b/src/main/resources/templates/system/log.html
@@ -11,12 +11,13 @@
     <title>可视化工具</title>
 
     <link href="/static/common/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/common/layui/css/layui.css" rel="stylesheet">
+    <link href="/static/common/bootstrap/css/bootstrap-table.min.css" rel="stylesheet">
     <link href="/static/modules/system/css/home.css" rel="stylesheet">
 
     <script src="/static/common/jquery/jquery-3.4.1.min.js"></script>
     <script src="/static/common/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/common/layui/layui.js"></script>
+    <script src="/static/common/bootstrap/js/bootstrap-table.min.js"></script>
+    <script src="/static/common/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
     <script src="/static/modules/system/js/log.js"></script>
 </head>
 <body>
@@ -45,7 +46,7 @@
         <ol class="breadcrumb">
             <li><a href="#">操作日志</a></li>
         </ol>
-        <table id="logTable" class="layui-table">
+        <table id="logTable" class="table table-hover table-striped table-bordered table-condensed" >
 
         </table>
 
