--- a/src/main/resources/templates/zookeeper/zookeeper.html
+++ b/src/main/resources/templates/zookeeper/zookeeper.html
@@ -41,7 +41,12 @@
         <ol class="breadcrumb">
             <li><a href="#">zk管理</a></li>
         </ol>
-        zk管理界面
+        <div class="container-fluid">
+            <div class="row">
+                <div class=""></div>
+
+            </div>
+        </div>
 
     </div>
 </div>
